Fix some layout issues + add rules in jquery to show Chart

--- a/style.css
+++ b/style.css
@@ -2,6 +2,21 @@ body {
   font-family: "Open Sans", sans-serif;
 }
 
+.chart-cards-grid {
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: 2fr 1fr;
+}
+
+.pie-chart {
+  height: 400px !important;
+}
+
+@media (max-width: 1024px) {
+  .chart-cards-grid {
+    grid-template-columns: 1fr;
+  }
+}
 .card-deck-1 {
   display: grid;
   grid-gap: 1rem;
@@ -59,6 +74,29 @@ body {
     grid-gap: 1rem;
     grid-template-columns: repeat(1, 1fr);
   }
+}
+.table-cell-base, .table-content .table-row-cell, .table-header-cell {
+  flex: 100 0 auto;
+  width: 100px;
+}
+
+.table-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.table-header-cell {
+  text-align: center;
+}
+
+.table-content .table-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.navbar {
+  height: 80px;
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
 }
 
 /*# sourceMappingURL=style.css.map */
